better speed calculation and a speedometer

--- a/distracted-driving/distracted-driving/en.lproj/ViewController.xib
+++ b/distracted-driving/distracted-driving/en.lproj/ViewController.xib
@@ -84,6 +84,7 @@
 						<int key="NSvFlags">267</int>
 						<string key="NSFrame">{{215, 393}, {84, 37}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -138,7 +139,7 @@
 					<object class="IBUILabel" id="162847997">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{79, 340}, {161, 21}}</string>
+						<string key="NSFrame">{{0, 328}, {320, 53}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSNextKeyView" ref="543299255"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -242,14 +243,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">spedometer</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="162847997"/>
-					</object>
-					<int key="connectionID">35</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">tagButton</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="394538218"/>
@@ -257,22 +250,21 @@
 					<int key="connectionID">36</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">speedometer</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="162847997"/>
+					</object>
+					<int key="connectionID">39</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">toggleButton:</string>
+						<string key="label">startButtonWasTouched:</string>
 						<reference key="source" ref="543299255"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">17</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">uploadRows:</string>
-						<reference key="source" ref="623112253"/>
-						<reference key="destination" ref="372490531"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">20</int>
+					<int key="connectionID">38</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -404,7 +396,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">37</int>
+			<int key="maxID">39</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
